ft: developed the contact me button

--- a/home.html
+++ b/home.html
@@ -35,6 +35,9 @@
                         -Adams</p>
                     </div>
                 </div>
+                <div>
+                    <button>Contact me</button>
+                </div>
             </div>
             <div class="side3">
                 <div class="pix1"><img src="../Grid/images/gallery-1.jpg" ></div>
@@ -48,6 +51,7 @@
                 <div class="pic9"><img src="../Grid/images/gallery-7.jpg" ></div>
             </div>
         </div>
+
     </div>
 </body>
 </html>
