ft:i developed a contact-me page

--- a/home.html
+++ b/home.html
@@ -18,37 +18,38 @@
                 
                 <div class="side2">
                     <div class="img1">
-                        <img src="../Grid/images/dave.jpg" alt="">
+                        <img src="../Grid-Lecture/images/dave.jpg" alt="">
                         <p>Don't sit down and wait for opportunities to come.
                         Get up and make them <br>
                         -Waker</p>
-                        <img src="../Grid/images/ben.jpg" alt="">
+                        <img src="../Grid-lecture/images/ben.jpg" alt="">
                         <p>Do not let what you cannot do interfere with what you can do <br>
                         -John wooden</p> 
                     </div>
                     <div class="img2">
-                        <img src="../Grid/images/hannah.jpg" alt="">
+                        <img src="../Grid-Lecture/images/hannah.jpg" alt="">
                         <p>If someone else can do it, there's no reason you cannot do it.
                         <br>-hannal</p>
-                        <img src="../Grid/images/steve.jpg" alt="">
+                        <img src="../Grid-Lecture/images/steve.jpg" alt="">
                         <p>Those who flow as life flows know they need no other force<br>
                         -Adams</p>
                     </div>
+                    <div class="reguest">
+                        <button><a href="contact.html">Contact me</a></button>
+                    </div>
                 </div>
-                <div>
-                    <button>Contact me</button>
-                </div>
+                
             </div>
             <div class="side3">
-                <div class="pix1"><img src="../Grid/images/gallery-1.jpg" ></div>
-                <div class="pic2"><img src="../Grid/images/gallery-10.jpg" ></div>
-                <div class="pic3"><img src="../Grid/images/gallery-11.jpg" ></div>
-                <div class="pic4"><img src="../Grid/images/gallery-12.jpg" ></div>
-                <div class="pic5"><img src="../Grid/images/gallery-2.jpg" ></div>
-                <div class="pic6"><img src="../Grid/images/gallery-3.jpg" ></div>
-                <div class="pic7"><img src="../Grid/images/gallery-5.jpg" ></div>
-                <div class="pic8"><img src="../Grid/images/gallery-6.jpg" ></div>
-                <div class="pic9"><img src="../Grid/images/gallery-7.jpg" ></div>
+                <div class="pix1"><img src="../Grid-Lecture/images/gallery-1.jpg" ></div>
+                <div class="pic2"><img src="../Grid-Lecture/images/gallery-10.jpg" ></div>
+                <div class="pic3"><img src="../Grid-Lecture/images/gallery-11.jpg" ></div>
+                <div class="pic4"><img src="../Grid-Lecture/images/gallery-12.jpg" ></div>
+                <div class="pic5"><img src="../Grid-Lecture/images/gallery-2.jpg" ></div>
+                <div class="pic6"><img src="../Grid-Lecture/images/gallery-3.jpg" ></div>
+                <div class="pic7"><img src="../Grid-Lecture/images/gallery-5.jpg" ></div>
+                <div class="pic8"><img src="../Grid-Lecture/images/gallery-6.jpg" ></div>
+                <div class="pic9"><img src="../Grid-Lecture/images/gallery-7.jpg" ></div>
             </div>
         </div>
 
